# ai-trip-planner

./: .gitignore  GOOGLE_AI_SETUP.md  README.md  docker-compose.yml  generate_itineraries.py  itinerary_results.json  start.sh  test_api.py  test_configuration.py  test_google_ai_access.py  test_google_ai_simple.py
backend/: Dockerfile  env_example.txt  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: TripPlannerForm.tsx  TripResults.tsx
frontend/src/types/: trip.ts
